packages/examples/packages/errors/snap.config.js
module.exports = {
  cliOptions: {
    port: 8006,
    src: './src/index.ts',
  },
};
